--- a/vignettes/Mass_Spec_Data_Processing.Rmd
+++ b/vignettes/Mass_Spec_Data_Processing.Rmd
@@ -95,7 +95,7 @@ print("Cluster list:")
 print(tsnedata.span2.list)
 ```
 
-After obtaining the combined data from the previous step, the MakeClusterList function is employed to identify clusters within your dataset. Clustering is an important step in data analysis, allowing you to group similar observations (in this case, genes) based on their characteristics. This helps in understanding relationships in the data. The output, cluster_list, will show which genes are grouped together, enabling you to see how they relate to each other visually in the next steps. Important Note: Avoid altering the output files' data types, as this can affect subsequent analyses.
+After obtaining the combined data from the previous step, the MakeClusterList function is employed to identify clusters within your dataset. This must be run three times: with the combined data from Step 1, the result from just the SpearmanDissimilarity function, and the result from the Euclidean Distance function. Clustering is an important step in data analysis, allowing you to group similar observations (in this case, genes) based on their characteristics. This helps in understanding relationships in the data. The output, cluster_list, will show which genes are grouped together, enabling you to see how they relate to each other visually in the next steps. Important Note: Avoid altering the output files' data types, as this can affect subsequent analyses.
 
 #### Step 3: FindCommonCluster
 ```{r eval=FALSE}
